--- a/notebooks/MVPA_decoding.ipynb
+++ b/notebooks/MVPA_decoding.ipynb
@@ -2,126 +2,144 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1f598a65",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[NiftiMasker.fit] Loading data from None\n",
-      "[NiftiMasker.fit] Resampling mask\n",
-      "[NiftiMasker.transform_single_imgs] Loading data from Nifti1Image(\n",
-      "shape=(97, 115, 97, 60),\n",
-      "affine=array([[   4. ,    0. ,    0. ,  -96.5],\n",
-      "       [   0. ,    4. ,    0. , -132.5],\n",
-      "       [   0. ,    0. ,    4. ,  -78.5],\n",
-      "       [   0. ,    0. ,    0. ,    1. ]])\n",
-      ")\n",
-      "[NiftiMasker.transform_single_imgs] Resampling images\n",
-      "[NiftiMasker.transform_single_imgs] Extracting region signals\n",
-      "[NiftiMasker.transform_single_imgs] Cleaning extracted signals\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=-1)]: Using backend LokyBackend with 8 concurrent workers.\n",
-      "[Parallel(n_jobs=-1)]: Done  25 tasks      | elapsed:   52.1s\n",
-      "[Parallel(n_jobs=-1)]: Done  60 out of  60 | elapsed:  1.9min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Classification accuracy: 0.9625 / Chance level: 0.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import nilearn\n",
-    "import os\n",
-    "import os.path as op\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import shinobi_behav\n",
-    "\n",
     "from nilearn.decoding import Decoder\n",
     "from sklearn.model_selection import LeaveOneGroupOut\n",
     "from nilearn.plotting import plot_stat_map, show\n",
+    "import argparse\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sbn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
+    "import os.path as op\n",
+    "import os\n",
     "\n",
+    "sub = \"sub-01\"\n",
     "\n",
     "path_to_data = shinobi_behav.DATA_PATH\n",
-    "model = \"full\"\n",
-    "CONDS_LIST = ['HIT', 'JUMP', 'DOWN', 'LEFT', 'RIGHT']#, 'Kill', 'HealthLoss']#'HealthGain', 'UP']\n",
+    "models = [\"simple\"]\n",
+    "model = \"simple\"\n",
+    "CONDS_LIST = ['HIT', 'JUMP', 'DOWN', 'LEFT', 'RIGHT', 'Kill', 'HealthLoss']#, 'Kill', 'HealthLoss']#'HealthGain', 'UP']\n",
     "#additional_contrasts = ['HIT+JUMP-RIGHT-LEFT-UP-DOWN', 'RIGHT+LEFT+UP+DOWN-HIT-JUMP']\n",
     "contrasts = CONDS_LIST# + additional_contrasts\n",
-    "sub = \"sub-01\"\n",
-    "mask_fname = op.join(\n",
-    "    path_to_data,\n",
-    "    \"cneuromod.processed\",\n",
-    "    \"smriprep\",\n",
-    "    sub,\n",
-    "    \"anat\",\n",
-    "    f\"{sub}_space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz\",\n",
-    ")\n",
-    "anat_fname = op.join(\n",
-    "    path_to_data,\n",
-    "    \"cneuromod.processed\",\n",
-    "    \"smriprep\",\n",
-    "    sub,\n",
-    "    \"anat\",\n",
-    "    f\"{sub}_space-MNI152NLin2009cAsym_desc-preproc_T1w.nii.gz\",\n",
-    ")\n",
     "\n",
-    "z_maps = []\n",
-    "contrast_label = []\n",
-    "session_label = []\n",
-    "for contrast in contrasts:\n",
-    "    z_maps_fpath = op.join(path_to_data, \"processed\", \"z_maps\", \"ses-level\", contrast)\n",
-    "    for z_map_fname in os.listdir(z_maps_fpath):\n",
-    "        if model in z_map_fname:\n",
-    "            if sub in z_map_fname:\n",
-    "                session = z_map_fname.split(\"_\")[1]\n",
-    "                z_maps.append(op.join(z_maps_fpath, z_map_fname))\n",
-    "                contrast_label.append(contrast)\n",
-    "                session_label.append(session)\n",
-    "\n",
-    "\n",
-    "decoder = Decoder(estimator='svc', mask=mask_fname, standardize=False,\n",
-    "                  screening_percentile=5, cv=LeaveOneGroupOut(), n_jobs=-1, verbose=1)\n",
-    "decoder.fit(z_maps, contrast_label, groups=session_label)\n",
-    "\n",
-    "classification_accuracy = np.mean(list(decoder.cv_scores_.values()))\n",
-    "chance_level = 1. / len(np.unique(contrast_label))\n",
-    "print('Classification accuracy: {:.4f} / Chance level: {}'.format(\n",
-    "    classification_accuracy, chance_level))"
+    "mvpa_results_path = op.join(path_to_data, \"processed\", \"mvpa_results\")\n",
+    "os.makedirs(mvpa_results_path, exist_ok=True)\n",
+    "confusion_matrices_fname = f\"{sub}_{model}_confusion_matrices.pkl\"\n",
+    "if op.isfile(op.join(mvpa_results_path, confusion_matrices_fname)):\n",
+    "    with open(op.join(mvpa_results_path, confusion_matrices_fname), 'rb') as f:\n",
+    "        confusion_matrices = pickle.load(f)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "id": "72ed0bc8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(array(['DOWN', 'HIT', 'HealthLoss', 'JUMP', 'Kill', 'LEFT', 'RIGHT'],\n",
-       "       dtype='<U10'),\n",
-       " array([12, 12, 12, 12, 12, 12, 12]))"
+       "[array([[0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 1, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 1, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [0, 0, 0, 0, 0, 1, 0],\n",
+       "        [0, 0, 0, 0, 0, 0, 1]]),\n",
+       " array([[0, 0, 1, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0],\n",
+       "        [0, 0, 0, 0, 1, 0, 0],\n",
+       "        [1, 0, 0, 0, 0, 0, 0],\n",
+       "        [0, 1, 0, 0, 0, 0, 0]])]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.unique(contrast_label, return_counts=True)"
+    "confusion_matrices"
    ]
   },
   {
@@ -218,8 +236,166 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ffa89cf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hyruuk/python_envs/shinobi_env/lib/python3.7/site-packages/nilearn/__init__.py:69: FutureWarning: Python 3.7 support is deprecated and will be removed in release 0.12 of Nilearn. Consider switching to Python 3.9 or 3.10.\n",
+      "  _python_deprecation_warnings()\n",
+      "usage: ipykernel_launcher.py [-h] [-s SUBJECT]\n",
+      "ipykernel_launcher.py: error: unrecognized arguments: -f /home/hyruuk/.local/share/jupyter/runtime/kernel-1dfed9ed-b18c-4005-8443-0351215a36ed.json\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "2",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/hyruuk/python_envs/shinobi_env/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3452: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import os.path as op\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import shinobi_behav\n",
+    "from nilearn.decoding import Decoder\n",
+    "from sklearn.model_selection import LeaveOneGroupOut\n",
+    "from nilearn.plotting import plot_stat_map, show\n",
+    "import argparse\n",
+    "from sklearn.metrics import confusion_matrix\n",
+    "import seaborn as sbn\n",
+    "import matplotlib.pyplot as plt\n",
+    "import pickle\n",
+    "import os.path as op\n",
+    "import os\n",
+    "\n",
+    "parser = argparse.ArgumentParser()\n",
+    "parser.add_argument(\n",
+    "    \"-s\",\n",
+    "    \"--subject\",\n",
+    "    default=None,\n",
+    "    type=str,\n",
+    "    help=\"Subject to process\",\n",
+    ")\n",
+    "args = parser.parse_args()\n",
+    "\n",
+    "def main():\n",
+    "    path_to_data = shinobi_behav.DATA_PATH\n",
+    "    models = [\"simple\"]\n",
+    "    model = \"simple\"\n",
+    "    CONDS_LIST = ['HIT', 'JUMP', 'DOWN', 'LEFT', 'RIGHT', 'Kill', 'HealthLoss']#, 'Kill', 'HealthLoss']#'HealthGain', 'UP']\n",
+    "    #additional_contrasts = ['HIT+JUMP-RIGHT-LEFT-UP-DOWN', 'RIGHT+LEFT+UP+DOWN-HIT-JUMP']\n",
+    "    contrasts = CONDS_LIST# + additional_contrasts\n",
+    "    if args.subject is not None:\n",
+    "        subjects = [args.subject]\n",
+    "    else:\n",
+    "        subjects = shinobi_behav.SUBJECTS\n",
+    "    for sub in subjects:\n",
+    "        mvpa_results_path = op.join(path_to_data, \"processed\", \"mvpa_results\")\n",
+    "        os.makedirs(mvpa_results_path, exist_ok=True)\n",
+    "        confusion_matrices_fname = f\"{sub}_{model}_confusion_matrices.pkl\"\n",
+    "        if op.isfile(op.join(mvpa_results_path, confusion_matrices_fname)):\n",
+    "            with open(op.join(mvpa_results_path, confusion_matrices_fname), 'rb') as f:\n",
+    "                confusion_matrices = pickle.load(f)\n",
+    "        else:\n",
+    "\n",
+    "            mask_fname = op.join(\n",
+    "                path_to_data,\n",
+    "                \"cneuromod.processed\",\n",
+    "                \"smriprep\",\n",
+    "                sub,\n",
+    "                \"anat\",\n",
+    "                f\"{sub}_space-MNI152NLin2009cAsym_desc-brain_mask.nii.gz\",\n",
+    "            )\n",
+    "            anat_fname = op.join(\n",
+    "                path_to_data,\n",
+    "                \"cneuromod.processed\",\n",
+    "                \"smriprep\",\n",
+    "                sub,\n",
+    "                \"anat\",\n",
+    "                f\"{sub}_space-MNI152NLin2009cAsym_desc-preproc_T1w.nii.gz\",\n",
+    "            )\n",
+    "            #for model in models:\n",
+    "            z_maps = []\n",
+    "            contrast_label = []\n",
+    "            session_label = []\n",
+    "            for contrast in contrasts:\n",
+    "                z_maps_fpath = op.join(path_to_data, \"processed\", \"z_maps\", \"ses-level\", contrast)\n",
+    "                for z_map_fname in os.listdir(z_maps_fpath):\n",
+    "                    if model in z_map_fname:\n",
+    "                        if sub in z_map_fname:\n",
+    "                            session = z_map_fname.split(\"_\")[1]\n",
+    "                            z_maps.append(op.join(z_maps_fpath, z_map_fname))\n",
+    "                            contrast_label.append(contrast)\n",
+    "                            session_label.append(session)\n",
+    "\n",
+    "            decoder = Decoder(estimator='svc', mask=mask_fname, standardize=False,\n",
+    "                            screening_percentile=5, cv=LeaveOneGroupOut(), n_jobs=-1, verbose=1)\n",
+    "            decoder.fit(z_maps, contrast_label, groups=session_label)\n",
+    "\n",
+    "            classification_accuracy = np.mean(list(decoder.cv_scores_.values()))\n",
+    "            chance_level = 1. / len(np.unique(contrast_label))\n",
+    "            print(f'Decoding : {sub} {model}')\n",
+    "            print('Classification accuracy: {:.4f} / Chance level: {}'.format(\n",
+    "                classification_accuracy, chance_level))\n",
+    "            \n",
+    "            for cond in contrasts:\n",
+    "                output_fname = op.join(\"./\", \"reports\", \"figures\", \"subject-level\", cond, \"MVPA\", f\"{sub}_{cond}_{model}_mvpa.png\")\n",
+    "                os.makedirs(op.join(\"./\", \"reports\", \"figures\", \"subject-level\", cond, \"MVPA\"), exist_ok=True)\n",
+    "                weight_img = decoder.coef_img_[cond]\n",
+    "                plot_stat_map(weight_img, bg_img=anat_fname, title=f\"SVM weights {cond}\", output_file=output_fname)\n",
+    "\n",
+    "            # Generate confusion matrices across folds\n",
+    "            confusion_matrices = []\n",
+    "            for train, test in decoder.cv.split(z_maps, contrast_label, groups=session_label):\n",
+    "                decoder.fit(np.array(z_maps)[train], np.array(contrast_label)[train], groups=np.array(session_label)[train])\n",
+    "                y_pred = decoder.predict(np.array(z_maps)[test])\n",
+    "                y_true = np.array(contrast_label)[test]\n",
+    "                confusion_mat = confusion_matrix(y_true, y_pred, labels=decoder.classes_)\n",
+    "                confusion_matrices.append(confusion_mat)\n",
+    "        \n",
+    "            # Save confusion matrices\n",
+    "            with open(op.join(mvpa_results_path, confusion_matrices_fname), 'wb') as f:\n",
+    "                pickle.dump(confusion_matrices, f)\n",
+    "\n",
+    "            # Plot confusion matrices\n",
+    "            averaged_confusion_matrix = np.mean(confusion_matrices, axis=0)\n",
+    "            std_confusion_matrix = np.std(confusion_matrices, axis=0)\n",
+    "            sbn.heatmap(averaged_confusion_matrix, annot=True, cmap='Blues', fmt='g', xticklabels=decoder.classes_, yticklabels=decoder.classes_)\n",
+    "            output_fname = op.join(\"./\", \"reports\", \"figures\", \"subject-level\", \"confusion_matrices\", f\"{sub}_{model}_averaged_confusion_matrix.png\")\n",
+    "            os.makedirs(op.join(\"./\", \"reports\", \"figures\", \"subject-level\", \"confusion_matrices\"), exist_ok=True)\n",
+    "            plt.savefig(output_fname)\n",
+    "            plt.close()\n",
+    "            sbn.heatmap(std_confusion_matrix, annot=True, cmap='Blues', fmt='g', xticklabels=decoder.classes_, yticklabels=decoder.classes_)\n",
+    "            output_fname = op.join(\"./\", \"reports\", \"figures\", \"subject-level\", \"confusion_matrices\", f\"{sub}_{model}_std_confusion_matrix.png\")\n",
+    "            plt.savefig(output_fname)\n",
+    "            plt.close()\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    main()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c649d37",
    "metadata": {},
    "outputs": [],
    "source": []
